objects/Quote_GEO_Region_Approvers__c.object
<CustomObject>
    <fields>
        <fullName>Approver2_Id__c</fullName>
        <label>Approver2 Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver3_Id__c</fullName>
        <label>Approver3 Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GEO__c</fullName>
        <label>GEO</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Quote GEO Region Approver</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APR-{0000}</displayFormat>
        <label>Quote GEO Region Approvers Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote GEO Region Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>